--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,11 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --disable=missing-module-docstring,\
+        invalid-name,\
+        useless-parent-delegation,\
+        too-few-public-methods,\
+        broad-exception-caught,\
+        missing-class-docstring,\
+        unused-argument \
+        $(git ls-files '*.py')
