add api container

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -13,3 +13,6 @@ DB_PASSWORD=
 MONGOEXPRESS_SOCKET=127.0.0.1:3000
 EXPRESS_BASIC_AUTH_USERNAME=
 EXPRESS_BASIC_AUTH_PASSWORD=
+
+# api
+API_SOCKET=127.0.0.1:5000
