--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3.1'
 services:
+###################################################
   mongo:
     image: mongo:5.0.28
     platform: ${PLATFORM}
@@ -31,6 +32,16 @@ services:
     restart: always
     depends_on:
       - mongo
-
+###################################################  
+  api:
+    build:
+      dockerfile: ../Dockerfile
+    container_name: api
+    ports:
+      - "${API_SOCKET}:5000"
+    restart: always
+    depends_on:
+      - mongo
+###################################################
 volumes:
   mongo-data:
