--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,15 +5,14 @@ PLATFORM=linux/arm64
 # mongo
 DB_ROOT_USERNAME=
 DB_ROOT_PASSWORD=
-DB_NAME=mini-rag
+DB_NAME=rag
 DB_USERNAME=
 DB_PASSWORD=
 
 # mongoexpress
-MONGOEXPRESS_SOCKET=127.0.0.1:3000
+MONGOEXPRESS_SOCKET=127.0.0.1:8081
 EXPRESS_BASIC_AUTH_USERNAME=
 EXPRESS_BASIC_AUTH_PASSWORD=
 
 # api
-IMAGE_TAG=1
 API_SOCKET=127.0.0.1:5000
