--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.9.19-slim
 WORKDIR /app
-COPY ./src/requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY ./src .
+COPY . .
 RUN useradd app
 RUN chown -R app:app /app
 USER app
