--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,4 +6,5 @@ pydantic-settings==2.3.4
 aiofiles==23.2.1
 langchain-community==0.2.6 
 PyMuPDF==1.24.7
-pylint==3.2.5 
+pylint==3.2.5
+Motor==3.4.0
