--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,14 +5,14 @@ PLATFORM=linux/arm64
 # mongo
 DB_ROOT_USERNAME=
 DB_ROOT_PASSWORD=
-DB_NAME=rag
+
+# mongoexpress
+MONGOEXPRESS_SOCKET=127.0.0.1:3001
+EXPRESS_BASIC_AUTH_USERNAME=
+EXPRESS_BASIC_AUTH_PASSWORD=
+DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
 
-# mongoexpress
-MONGOEXPRESS_SOCKET=127.0.0.1:8081
-EXPRESS_BASIC_AUTH_USERNAME=
-EXPRESS_BASIC_AUTH_PASSWORD=
-
 # api
-API_SOCKET=127.0.0.1:5000
+API_SOCKET=127.0.0.1:3000
