replace local uploads with minio

--- a/src/.env.example
+++ b/src/.env.example
@@ -6,3 +6,7 @@ FILE_MAX_SIZE=10
 FILE_DEFAULT_CHUNK_SIZE=512000
 MONGODB_URL="mongodb://username:password@host:port/authentication_db"
 MONGODB_DATABASE="rag"
+MINIO_URL=
+MINIO_BUCKET_NAME="mini-rag-uploads"
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
