--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.analysis.extraPaths": ["./src"],
+    "python.analysis.extraPaths": ["./"],
     "pylint.args": [
         "--disable=missing-module-docstring, invalid-name, useless-parent-delegation, too-few-public-methods, broad-exception-caught, missing-class-docstring, unused-argument"
     ]
