--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -27,4 +27,5 @@ jobs:
         broad-exception-caught,\
         missing-class-docstring,\
         unused-argument \
+        --max-line-length=120 \
         $(git ls-files '*.py')
