--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - mongo-data:/data/db
     restart: always
-###################################################  
+###################################################
   mongoexpress:
     image: mongo-express:1.0.2-18
     platform: ${PLATFORM}
@@ -29,7 +29,24 @@ services:
     restart: always
     depends_on:
       - mongo
-###################################################  
+###################################################
+  qdrant:
+    image: qdrant/qdrant:latest
+    restart: always
+    container_name: qdrant
+    # ports:
+    #   - 6333:6333
+    #   - 6334:6334
+    # expose:
+    #   - 6333
+    #   - 6334
+    #   - 6335
+    # configs:
+    #   - source: qdrant_config
+    #     target: /qdrant/config/production.yaml
+    volumes:
+      - qdrant-data:/qdrant/storage
+###################################################
   api:
     build:
       context: ../src
@@ -39,6 +56,9 @@ services:
     restart: always
     depends_on:
       - mongo
+      - qdrant
 ###################################################
+
 volumes:
   mongo-data:
+  qdrant-data:
