--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,8 +4,11 @@ python-multipart==0.0.9
 python-dotenv==1.0.1
 pydantic-settings==2.3.4
 aiofiles==23.2.1
-langchain-community==0.2.6 
+langchain-community==0.2.6
 PyMuPDF==1.24.7
 pylint==3.2.5
 Motor==3.6.0
 minio==7.2.11
+openai==1.57.1
+cohere==5.13.3
+qdrant-client==1.12.1
