--- a/src/.env.example
+++ b/src/.env.example
@@ -30,3 +30,7 @@ GENERATION_DAFAULT_TEMPERATURE=0.1
 VECTOR_DB_BACKEND="QDRANT"
 VECTOR_DB_URL="http://qdrant:6333"
 VECTOR_DB_DISTANCE_METHOD="cosine"
+
+### Template Config
+PRIMARY_LANG="en"
+DEFAULT_LANG="en"
