add comments to .env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -3,8 +3,12 @@ APP_VERSION="0.1"
 FILE_ALLOWED_TYPES=["text/plain","application/pdf"]
 FILE_MAX_SIZE=10
 FILE_DEFAULT_CHUNK_SIZE=512000
+
+### MongoDB
 MONGODB_URL="mongodb://username:password@host:port/authentication_db"
 MONGODB_DATABASE="rag"
+
+### MINIO
 MINIO_URL=
 MINIO_BUCKET_NAME="mini-rag-uploads"
 MINIO_ACCESS_KEY=
